Fix: fixing page overflow

--- a/ui.frontend/src/components/SelectVue/index.scss
+++ b/ui.frontend/src/components/SelectVue/index.scss
@@ -15,3 +15,8 @@
         height: 35px;
     }
 }
+#Certificate-id{
+    background: #074EE8 ;
+    color: #fff;
+    border: 0;
+}
